--- a/views/sections/finishedDemo.ejs
+++ b/views/sections/finishedDemo.ejs
@@ -1,28 +1,32 @@
-<% layout ('layouts/boilerplate.ejs')  %> 
+<% layout ('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-12 offset-md-3">
-            <div class="card text-center p-4">
-                <div class="row">
-                    <div class="col-12 mt-4">
-                        <i class="fas fa-check-circle green-check"></i>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 mt-4 mb-3">
-                        <h3>Hotovo </h3>
-                        <h5>Skvělá práce!</h5>
-                    </div>
-                </div>
-                
-                <hr>
-                <h4 class="mt-3">A co dál?</h4>
-                <p class="m-3">S InLege můžeš zdarma procházet <strong>více než 3 000 kartiček</strong> z různých oborů práva. Stačí se zaregistrovat!</p>
-                <p class="m-3">Pro ty, kteří chtějí získat maximum, máme připraveno dalších více než 3 000 kartiček s předplatným Premium.</p>
-                <p>
-                    <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
-                </p>
-            </div>
+  <div class="row">
+    <div class="col-md-6 col-12 offset-md-3">
+      <div class="card text-center p-4">
+        <div class="row">
+          <div class="col-12 mt-4">
+            <i class="fas fa-check-circle green-check"></i>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-12 mt-4 mb-3">
+            <h3>Hotovo</h3>
+            <h5>Skvělá práce!</h5>
+          </div>
+        </div>
+
+        <hr />
+        <h4 class="mt-3">A co dál?</h4>
+        <p class="m-3">
+          S Edookio můžeš vytvářet kartičky a otázky pomocí AI. Stačí se
+          zaregistrovat!
+        </p>
+        <p>
+          <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3"
+            >Vytvořit účet se zdarma</a
+          >
+        </p>
+      </div>
     </div>
+  </div>
 </div>
