--- a/views/index.ejs
+++ b/views/index.ejs
@@ -678,7 +678,7 @@
                   required
                 />
                 <p class="text-muted text-smaller my-1">
-                  Maximální rozsah textu v demo režimu je 25 stran.
+                  Maximální rozsah textu v demo režimu je 10 stran.
                 </p>
               </div>
             </div>
@@ -706,9 +706,12 @@
             <p id="progress-text">Čekám na nahrání souboru...</p>
           </div>
           <div id="document-success-container" style="display: none">
-            <h5 class="mt-3 text-center">Dokončeno!</h5>
+            <h6 class="mt-3 text-center">Dokončeno</h6>
             <div class="d-flex justify-content-center mt-2">
-              <a href="" class="btn btn-danger" id="show-generated-content-btn"
+              <a
+                href=""
+                class="btn btn-danger"
+                id="show-generated-content-btn my-2"
                 >Zobrazit vygenerovaný obsah</a
               >
             </div>
