--- a/views/sections/finishedDemo.ejs
+++ b/views/sections/finishedDemo.ejs
@@ -17,13 +17,13 @@
 
         <hr />
         <h4 class="mt-3">A co dál?</h4>
-        <p class="m-3">
-          S Edookio můžeš vytvářet kartičky a otázky pomocí AI. Stačí se
-          zaregistrovat!
-        </p>
+        <h5 class="m-3">
+          S Edookio můžeš snadno vytvářet tisíce kartiček jako jsou tyto. Stačí
+          se zaregistrovat!
+        </h5>
         <p>
           <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3"
-            >Vytvořit účet se zdarma</a
+            >Vytvořit účet zdarma</a
           >
         </p>
       </div>
