card demo final 3

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -710,8 +710,8 @@
             <div class="d-flex justify-content-center mt-2">
               <a
                 href=""
-                class="btn btn-danger"
-                id="show-generated-content-btn my-2"
+                class="btn btn-danger my-2"
+                id="show-generated-content-btn"
                 >Zobrazit vygenerovaný obsah</a
               >
             </div>
