--- a/views/index.ejs
+++ b/views/index.ejs
@@ -414,7 +414,7 @@
                 </p>
                 <% if (!generatedSectionId || !generatedCategoryId) { %>
                 <a
-                  href="/category/678ff4b549b78234672fe406/section/679125738da45fa30cf718a2/card30/1?mode=unknown"
+                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/card30/1?mode=unknown"
                   class="btn btn-lg btn-danger"
                   >Vyzkoušet kartičky</a
                 >
@@ -435,7 +435,19 @@
                   Naučené znalosti si tak rovnou můžeš ověřit pomocí navazující
                   testové sady.
                 </p>
-                <a href="#" class="btn btn-lg btn-danger">Vyzkoušet otázky</a>
+                <% if (!generatedSectionId || !generatedCategoryId) { %>
+                <a
+                  href="/category/<%= demoCategoryId %>/section/<%= demoSectionId %>/test"
+                  class="btn btn-lg btn-danger"
+                  >Vyzkoušet otázky</a
+                >
+                <% } else { %>
+                <a
+                  href="/category/<%= generatedCategoryId %>/section/<%= generatedSectionId %>/test"
+                  class="btn btn-lg btn-danger"
+                  >Vyzkoušet otázky</a
+                >
+                <% } %>
               </div>
             </div>
             <div class="col-lg-6 mb-3">
